Maquetación finalizada sin JS

--- a/index.html
+++ b/index.html
@@ -126,11 +126,11 @@
     </section>
 
     <!-- Sección Mis Últimos Trabajos -->
-    <section class="ultimos-trabajos container-fluid my-5">
+    <section class="ultimos-trabajos container-fluid my-5 p-5">
         <div class="container">
             <div class="row text-center">
                 <div class="col-12">
-                    <h2 class="text-center text-white mt-5">Mis últimos trabajos
+                    <h2 class="text-center text-white mt-2">Mis últimos trabajos
                         <hr class="mt-4 mb-5">
                     </h2>
                 </div>
@@ -139,9 +139,10 @@
             <div class="row justify-content-center">
                 <div class="card-deck">
                     <div class="card mb-5">
-                        <img src=" assets/img/meet_coffee.png" class="card-img-top" alt="proyecto meet&coffe">
+                        <img src=" assets/img/meet_coffee.png" class="card-img-top border-bottom"
+                            alt="proyecto meet&coffe">
                         <div class="card-body">
-                            <h3 class="card-title font-weight-bold text-left">Meet&Coffe</h3>
+                            <h3 class="card-title font-weight-regular text-left">Meet&Coffe</h3>
                             <p class="text-left">Felis tincidunt vel risus lacus posuere dignissim habitasse sapien,
                             </p>
                         </div>
@@ -149,15 +150,15 @@
                     <div class="card mb-5">
                         <img src="assets/img/iguana_page.png" class="card-img-top" alt="proyecto iguana page">
                         <div class="card-body">
-                            <h3 class="card-title font-weight-bold text-left">Iguana Page</h3>
+                            <h3 class="card-title font-weight-regular text-left">Iguana Page</h3>
                             <p class="text-left">Felis tincidunt vel risus lacus posuere dignissim habitasse sapien,
                             </p>
                         </div>
                     </div>
                     <div class="card mb-5">
-                        <img src="assets/img/suricata.png" class="card-img-top" alt="proyecto suricata">
+                        <img src="assets/img/suricata.png" class="card-img-top border-bottom" alt="proyecto suricata">
                         <div class="card-body">
-                            <h3 class="card-title font-weight-bold text-left">Suricata</h3>
+                            <h3 class="card-title font-weight-regular text-left">Suricata</h3>
                             <p class="text-left">Felis tincidunt vel risus lacus posuere dignissim habitasse sapien,
                             </p>
                         </div>
@@ -168,17 +169,17 @@
             <div class="row justify-content-center">
                 <div class="card-deck">
                     <div class="card mb-5">
-                        <img src=" assets/img/cuppon.png" class="card-img-top" alt="proyecto cuppon">
+                        <img src=" assets/img/cuppon.png" class="card-img-top border-bottom" alt="proyecto cuppon">
                         <div class="card-body">
-                            <h3 class="card-title font-weight-bold text-left">Cuppon</h3>
+                            <h3 class="card-title font-weight-regular text-left">Cuppon</h3>
                             <p class="text-left">Felis tincidunt vel risus lacus posuere dignissim habitasse sapien,
                             </p>
                         </div>
                     </div>
                     <div class="card mb-5">
-                        <img src="assets/img/ricomida.png" class="card-img-top" alt="proyecto ricomida">
+                        <img src="assets/img/ricomida.png" class="card-img-top border-bottom" alt="proyecto ricomida">
                         <div class="card-body">
-                            <h3 class="card-title font-weight-bold text-left">Ricomida</h3>
+                            <h3 class="card-title font-weight-regulartext-left">Ricomida</h3>
                             <p class="text-left">Felis tincidunt vel risus lacus posuere dignissim habitasse sapien,
                             </p>
                         </div>
@@ -186,7 +187,7 @@
                     <div class="card mb-5">
                         <img src="assets/img/dmark.png" class="card-img-top" alt="proyecto dmark">
                         <div class="card-body">
-                            <h3 class="card-title font-weight-bold text-left">DMark</h3>
+                            <h3 class="card-title font-weight-regular text-left">DMark</h3>
                             <p class="text-left">Felis tincidunt vel risus lacus posuere dignissim habitasse sapien,
                             </p>
                         </div>
@@ -196,8 +197,48 @@
         </div>
     </section>
 
+    <!-- Sección Formulario -->
+    <section class="formulario container-fluid">
+        <div class="container my-5 bg-white">
+            <div class="row">
+                <div class="col-12">
+                    <h2 class="text-center">Contacto
+                        <hr class="mt-4">
+                    </h2>
+                    <div class="typeform-widget" data-url="https://contactochd.typeform.com/to/XvsERr"
+                        style="width: 100%; height: 500px;">
+                    </div>
+                    <script> (function () { var qs, js, q, s, d = document, gi = d.getElementById, ce = d.createElement, gt = d.getElementsByTagName, id = "typef_orm", b = "https://embed.typeform.com/"; if (!gi.call(d, id)) { js = ce.call(d, "script"); js.id = id; js.src = b + "embed.js"; q = gt.call(d, "script")[0]; q.parentNode.insertBefore(js, q) } })() </script>
+                </div>
+            </div>
+        </div>
+    </section>
 
-    <footer>hola</footer>
+
+    <!-- Sección Footer -->
+    <footer class="container-fluid mt-5 p-3 icons-section">
+        <div class="container my-3">
+            <div class="row">
+                <div class="col-12 col-lg-6 p-3 text-left align-items-center row justify-content-center">
+                    <h2 class="text-white align-items-center">Magdalena</h2>
+                </div>
+                <div class="col-12 col-lg-6 p-3 text-left align-items-center row justify-content-center">
+                    <div class="">
+                        <i class="fab fa-github-square fa-4x ml-4 mr-4"></i>
+                    </div>
+                    <div class="">
+                        <i class="fab fa-linkedin fa-4x mr-4"></i>
+                    </div>
+                    <div class="">
+                        <i class="fab fa-twitter-square fa-4x mr-4"></i>
+                    </div>
+                    <div class="">
+                        <i class="fab fa-facebook-square fa-4x mr-4"></i>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </footer>
 
 
 
